--- a/wholeBrain/_includes/quiz.html
+++ b/wholeBrain/_includes/quiz.html
@@ -1,11 +1,10 @@
-{% assign questions = site.data.quizzes[include.id] %}
-
+{% assign qs = site.data.quizzes[include.id] %}
 <div class="quiz">
-  {% for q in questions %}
+  {% for q in qs %}
     <p><strong>{{ q.question }}</strong></p>
     <ol type="A">
-      {% for choice in q.choices %}
-        <li>{{ choice }}</li>
+      {% for c in q.choices %}
+        <li>{{ c }}</li>
       {% endfor %}
     </ol>
   {% endfor %}
