--- a/wholeBrain/_layouts/default.html
+++ b/wholeBrain/_layouts/default.html
@@ -13,6 +13,7 @@
       <a href="/">Home</a>
       <a href="/chapters/">Chapters</a>
       <a href="/quizzes/">Quizzes</a>
+      <a href="/about/">About</a>
     </nav>
   </header>
 
