added quiz functionality

--- a/wholeBrain/_layouts/default.html
+++ b/wholeBrain/_layouts/default.html
@@ -25,5 +25,8 @@
   <footer>
     <p>&copy; 2025 WholeBrain Project</p>
   </footer>
+  
+  <script src="/assets/quiz.js"></script>
+
 </body>
 </html>
