--- a/chickenGuide/_layouts/default.html
+++ b/chickenGuide/_layouts/default.html
@@ -28,7 +28,15 @@
     <p>&copy; 2025 Sarap Farm Chickens</p>
   </footer>
   
-  <script src="/assets/quiz.js"></script>
+  <!-- React + ReactDOM -->
+  <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+
+  <!-- Babel so we can write JSX in the browser -->
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
+  <!-- Your quiz component -->
+  <script type="text/babel" src="/assets/js/quiz.js"></script>
 
 </body>
 </html>
