--- a/wholeBrain/_layouts/default.html
+++ b/wholeBrain/_layouts/default.html
@@ -12,7 +12,7 @@
     <nav>
       <a href="/">Home</a>
       <a href="/chapters/">Chapters</a>
-      <a href="/quizzes/">Quizzes</a>
+      <!-- <a href="/quizzes/">Quizzes</a> -->
       <a href="/authors/">Authors</a> 
       <a href="/about/">About</a>
     </nav>
