fixed formatting of chicken site

--- a/chickenGuide/_layouts/default.html
+++ b/chickenGuide/_layouts/default.html
@@ -2,21 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>{{ page.title }} | The Chicken Guide By Wyatt B</title>
+  <title>{{ page.title }} | The Whole-Brain Child</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
-  <header class="header">
-    <h1><a href="/">Chicken Guide</a></h1>
-    <h3>by </h3>
+  <header>
+    <h1><a href="/">Chicken Raising Guide</a></h1>
     <nav>
       <a href="/">Home</a>
       <a href="/chapters/">Chapters</a>
-      <a href="/quizzes/">Quizzes</a>
+      <!-- <a href="/quizzes/">Quizzes</a> -->
       <a href="/authors/">Authors</a> 
       <a href="/about/">About</a>
-      <img src="/assets/images/hen.PNG" alt="chicken" width="50"/>
     </nav>
   </header>
 
@@ -25,18 +23,10 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Sarap Farm Chickens</p>
+    <p>&copy; 2025 WholeBrain Project</p>
   </footer>
   
-  <!-- React + ReactDOM -->
-  <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-
-  <!-- Babel so we can write JSX in the browser -->
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-
-  <!-- Your quiz component -->
-  <script type="text/babel" src="/assets/js/quiz.js"></script>
+  <script src="/assets/quiz.js"></script>
 
 </body>
 </html>
