got nav css enabled

--- a/chickenGuide/_layouts/default.html
+++ b/chickenGuide/_layouts/default.html
@@ -10,11 +10,12 @@
   <header>
     <h1><a href="/">Chicken Raising Guide</a></h1>
     <nav>
-      <a href="/">Home</a>
-      <a href="/chapters/">Chapters</a>
-      <!-- <a href="/quizzes/">Quizzes</a> -->
-      <a href="/authors/">Authors</a> 
-      <a href="/about/">About</a>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/chapters/">Chapters</a></li>
+        <li><a href="/authors/">Authors</a></li>
+        <li><a href="/about/">About</a></li>
+      </ul>
     </nav>
   </header>
 
